scripts: Support apksigner batch mode
See the corresponding tools/apksig change of the same change ID.

Change-Id: Ic140cf96509707a2a8b720727fdf1dc5e636e3db